--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {
  <img src="images/flagusa.JPEG" width="460" height="345">
 
 
-<img src="images/Washington.JPEG" width="460" height="345">
+<img src="images/washington.JPEG" width="460" height="345">
 
   <div class="first">Washington is the capital of the United States. With a population of just over half a million people. This is a small city by American standards. Washington was founded in 1791 and named after the first president of the United States, George Washington. It contains all government bodies, as well as the headquarters of such organizations as: the International Monetary Fund, the World Bank, the Inter-American Development Bank, the Organization of American States and the Pan American Health Organization.
 
@@ -76,7 +76,7 @@ Historians have long disputed whether members of Congress signed the Declaration
 By a remarkable coincidence, Thomas Jefferson and John Adams, the only two signatories of the Declaration of Independence later to serve as presidents of the United States, both died on the same day: July 4, 1826, which was the 50th anniversary of the Declaration, Jefferson even mentioning the fact.[14] (Only one other signatory, Charles Carroll of Carrollton, survived them, dying in 1832.) Although not a signatory of the Declaration of Independence, James Monroe, another Founding Father who was elected as president, also died on July 4, 1831. He was the third President who died on the anniversary of independence. Calvin Coolidge, the 30th president, was born on July 4, 1872; so far he is the only U.S. president to have been born on Independence Day.
 </div>
 
-<img src="images/Liberty.JPEG" width="460" height="345">
+<img src="images/liberty.JPEG" width="460" height="345">
 
   <div class="third">The project for the erection of a monument on Bedlow Island was approved by the US Congress only in 1877, and despite this, despite the fact that, according to the plan of the French, the unusual present should be ready by the hundredth anniversary of the signing of the US Declaration of Independence, that is, by July 4, 1876. However, the fundraising was delayed, and by this time only a brass hand with a torch was ready, which until the completion of work on the statue was sheltered in New York on Madison Square. By July 1878, Lady Liberty's head was ready. At the same time, the head is presented at an exhibition at the Museum of Arts and Crafts in Paris.It should be noted that funds for the construction of the monument were collected in all possible ways: balls, sports competitions, exhibitions and lotteries were organized. The eloquent Pulitzer, publisher of the New-York World newspaper, provided significant help in financing the construction of the monument.The first presentation of the finished Statue of Liberty took place on July 4, 1884 in France, after which the monument was dismantled and sent to the United States. The Statue of Liberty arrived in New York on July 17, 1885. The assembly of the monument took about 4 months. However, the official opening of the Statue of Liberty in New York by US President Grover Cleveland took place only on October 28, 1886. The opening ceremony was attended only by men. And this despite the fact that the Statue of Liberty is a symbol of democracy. As an exception, only Lessens' eight-year-old daughter and Bartholdi's wife were allowed on the island that day.By the way, Bedlow Island was officially renamed Liberty Island only in 1956, although Bartholdi suggested doing this back in the 19th century, 80 years before the event.</div>
 </div>
